[MainView] simplify handling and switching of views

--- a/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
@@ -48,7 +48,7 @@
               <items>
                   <Menu fx:id="subjectTypeMenu" disable="true" mnemonicParsing="false" text="subject types" />
                   <Menu fx:id="speciesTypeMenu" disable="true" mnemonicParsing="false" text="species" />
-                  <Menu fx:id="supplierMenu" mnemonicParsing="false" text="supplier" />
+                  <Menu fx:id="supplierMenu" disable="true" mnemonicParsing="false" text="supplier" />
               </items>
             </Menu>
         <Menu mnemonicParsing="false" text="Help">
@@ -62,32 +62,32 @@
    <left>
       <VBox fx:id="navigationBar" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minWidth="150.0" prefWidth="150.0" spacing="5.0">
          <children>
-            <TitledPane fx:id="inventoryPane" disable="true" expanded="false" onKeyPressed="#showInventory" onMouseClicked="#showInventory" text="Inventory">
+            <TitledPane fx:id="inventoryPane" disable="true" expanded="false" text="Inventory">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
               </content>
             </TitledPane>
-            <TitledPane fx:id="personsPane" disable="true" expanded="false" onKeyPressed="#showPersons" onMouseClicked="#showPersons" text="Persons">
+            <TitledPane fx:id="personsPane" disable="true" expanded="false" text="Persons">
                <content>
                   <VBox prefHeight="200.0" prefWidth="100.0" />
                </content>
             </TitledPane>
-            <TitledPane fx:id="subjectsPane" disable="true" expanded="false" onKeyPressed="#showSubjects" onMouseClicked="#showSubjects" text="Subjects">
+            <TitledPane fx:id="subjectsPane" disable="true" expanded="false" text="Subjects">
                <content>
                   <VBox prefHeight="200.0" prefWidth="100.0" />
                </content>
             </TitledPane>
-            <TitledPane fx:id="treatmentsPane" disable="true" expanded="false" onKeyPressed="#showTreatments" onMouseClicked="#showTreatments" text="Treatments">
+            <TitledPane fx:id="treatmentsPane" disable="true" expanded="false" text="Treatments">
                <content>
                   <VBox prefHeight="200.0" prefWidth="100.0" />
                </content>
             </TitledPane>
-            <TitledPane fx:id="animalHousingPane" disable="true" expanded="false" onKeyPressed="#showHousingUnits" onMouseClicked="#showHousingUnits" text="Animal housing">
+            <TitledPane fx:id="animalHousingPane" disable="true" expanded="false" text="Animal housing">
                <content>
                   <VBox prefHeight="200.0" prefWidth="100.0" />
                </content>
             </TitledPane>
-            <TitledPane fx:id="licensesPane" animated="false" disable="true" expanded="false" layoutX="10.0" layoutY="148.0" onKeyPressed="#showLicenseView" onMouseClicked="#showLicenseView" text="Licenses">
+            <TitledPane fx:id="licensesPane" animated="false" disable="true" expanded="false" layoutX="10.0" layoutY="148.0" text="Licenses">
                <content>
                   <VBox prefHeight="200.0" prefWidth="100.0" />
                </content>
