[cleanup] add license header, minor cleanup, additional system out ...
to get some more debug info when login fails

--- a/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/MainView.fxml
@@ -53,7 +53,7 @@
             </Menu>
         <Menu mnemonicParsing="false" text="Help">
           <items>
-            <MenuItem fx:id="aboutMenuItem" mnemonicParsing="false" text="about" />
+            <MenuItem fx:id="aboutMenuItem" mnemonicParsing="false" onAction="#showAbout" text="about" />
           </items>
         </Menu>
       </menus>
