[QuickActions] enable animal use report from home screen

--- a/database_mockup/src/animalkeeping/ui/fxml/QuickActions.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/QuickActions.fxml
@@ -137,7 +137,7 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Label>
-                        <Label text="animal use report">
+                        <Label onMouseClicked="#animalUseReport" text="animal use report">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
