[QuickActions] enable populationReport export

--- a/database_mockup/src/animalkeeping/ui/fxml/QuickActions.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/QuickActions.fxml
@@ -142,6 +142,11 @@
                               <Cursor fx:constant="HAND" />
                            </cursor>
                         </Label>
+                        <Label onMouseClicked="#populationReport" text="population report">
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </Label>
                      </children>
                   </VBox>
                   <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="5.0">
